--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -16,7 +16,7 @@
 @border-color-base: #d9d9d9; // 边框色
 @layout-header-background: #ffffff;
 @layout-body-background: #ffffff;
-
+@menu-item-color: #1890ff;
 @box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
   0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05); // 浮层阴影
 
@@ -31,4 +31,7 @@ body {
 
 #root {
   height: 100%;
+}
+p{
+  color: @primary-color;
 }
